[gd_scene load_steps=2 format=3 uid="uid://djm0rcu7q0uyv"]

[ext_resource type="Script" uid="uid://ckjwihfraq0k4" path="res://scripts/MultiplayerControl.gd" id="1_s3y6a"]

[node name="control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s3y6a")

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 44.0
offset_top = 32.0
offset_right = 209.0
offset_bottom = 84.0
text = "Host"

[node name="Join" type="Button" parent="."]
layout_mode = 0
offset_left = 41.0
offset_top = 114.0
offset_right = 206.0
offset_bottom = 166.0
text = "Join"

[node name="StartGame" type="Button" parent="."]
layout_mode = 0
offset_left = 237.0
offset_top = 29.0
offset_right = 402.0
offset_bottom = 81.0
text = "Start Game"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 162.0
offset_top = 224.0
offset_right = 511.0
offset_bottom = 261.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 224.0
offset_right = 137.0
offset_bottom = 262.0
text = "Name: "

[connection signal="pressed" from="Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="StartGame" to="." method="_on_start_game_pressed"]
